practic/src/main/java/com/example/practic/error/NotEnoughMoneyException.java
package com.example.practic.error;

public class NotEnoughMoneyException extends RuntimeException{
}
